# openstack-service-broker

./: .coveragerc  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  README.md  README.rst  setup.cfg  tox.ini
apb/openstack-keypair-apb/: Dockerfile  Makefile  README.rst  apb.yml
apb/openstack-keypair-apb/defaults/: main.yml
apb/openstack-keypair-apb/meta/: main.yml
apb/openstack-keypair-apb/playbooks/: bind.yml  deprovision.yml  provision.yml  unbind.yml
apb/openstack-keypair-apb/tasks/: flush_cfg.yml  main.yml
apb/openstack-keypair-apb/vars/: main.yml
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/user/: index.rst
releasenotes/source/: conf.py  index.rst
