[metadata]
name = openstack-service-broker
summary = Builds Ansible Playbook Bundles for use in Automation Broker to expose OpenStack services in the Kubernetes Service Catalog.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    openstack_service_broker

[compile_catalog]
directory = openstack_service_broker/locale
domain = openstack_service_broker

[update_catalog]
domain = openstack_service_broker
output_dir = openstack_service_broker/locale
input_file = openstack_service_broker/locale/openstack_service_broker.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = openstack_service_broker/locale/openstack_service_broker.pot
